...
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="gone"
            android:id="@+id/ivClearFilter"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/img_circle_bg"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/ic_close_gray_64"
            android:layout_width="30dp"
...
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivChangeSortType"
            android:padding="@dimen/margin_medium"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_filter_sort_gray_64"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

...
            android:padding="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="Sort by: Recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivChangeListView"
            android:padding="@dimen/margin_small"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_list_gray_64"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

...

    <!--show list-->
    <!--large grid UI-->

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rvBookListLargeUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        tools:itemCount="10"
        tools:listitem="@layout/view_holder_book" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2" />-->
    <!--small grid UI-->
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rvBookListSmallUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        tools:itemCount="10"
        tools:listitem="@layout/view_holder_book" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2" />-->
    <!--list UI-->
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rvBookListUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        tools:itemCount="10"
        tools:listitem="@layout/view_holder_list_view_type_book" />
   <!-- <include
...
